override.css
html {
    max-width: 100vw;
    overflow-x: hidden;
    font-family: 'proxima-nova', Arial, Helvetica, sans-serif;
}

html {
    max-width: 90vw;
}

#route-input {
    position:fixed; 
    top: 90px; 
    left: 10px; 
    z-index: 990;
}

.navbar {
    height: 10vh;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 999;
    width: 100vw;
}

.navbar-collapse {
    z-index: 999;
    background-color: #f8f9fa;;
    width: 100vw;
    padding: 0 50px;
}

.nav-link.active {
    color: #283FAF !important;
    border-bottom: 2px solid #283FAF;
}

aside {
    height: 90vh;
}

#sidebar {
    height: 90vh;
    width: 25vw;
    background-color: #f8f9fa;
    position: fixed;
    top: 10vh;
    left: 0;
}

#route-input {
    background-color: #00205B;
    width: calc(25vw + 10px);
    position: fixed;
    top: 10vh;
    left: 0;
    height: 150px;
    z-index: 990;
    align-items: center;
    justify-items: center;
    display: flex;
    justify-content: center;
    flex-direction: row;
    padding: 0 10px;
}

#route-input img {
    width: 48px;
}

#route-info {
    position: absolute;
    top: calc(110px + 10vh);
    height: calc(90vh - 100px);
}

#info-header {
    display: flex;
    margin-bottom: 10px;
}

#info-header img {
    visibility: hidden;
    display: none;
}

#sidebar h2 {
    font-weight: 700;
    padding-left: 20px;
}

h2.box {
    background-color: #FFC70A;
    font-weight: 700;
    margin: 0 2vw;
    font-weight: 500;
    font-size: 24px;
    width: 21vw;
    text-align: center;
    padding: 10px 0;
    z-index: 990;
    position: fixed;
    top: calc(130px + 10vh);
}

h3 {
    font-weight: 600;
    font-size: 18px;
}

#access-features {
    padding-left: 20px;
}

#access-checkboxes > div {padding: 5px 0;}

#route-length {
    position: relative;
    bottom: 45px;
    left: 18vw;
}

#access-summary {
    position: relative;
    bottom: 45px;
    width: 25vw;
}

#directions-container {
    position: absolute;
    top: 10vh;
    left: 15px;
}

#display-directions {
    position: relative;
    bottom: 50px;
    left: 10px;
}

#directions {
    list-style: none;
    padding: 0 10px 75px 0;
    height: 50vh;
    overflow-y: scroll;
    width: 22vw;
}

#directions li {
    padding-bottom: 5px;
}

#find-route {
    width: 15vw;
    position: relative;
    top: calc(92vh - 80px);
    margin: 0 5vw;
    background-color: #FFC70A;
    color: #363636;
    z-index: 995;
}

#finish-route {
    width: 7vw;
    position: relative;
    top: calc(92vh - 80px);
    left: 16vw;
    background-color: #283FAF;
    color: #f8f9fa;
    z-index: 995;
}

main.overlay-map {
    position: fixed;
    left: 0vw;
    top: 10vh;
    width: 100vw;
    height: 90vh;
}

main {
    position: fixed;
    left: 0;
    top: 10vh;
    width: 100vw;
    height: 90vh;
    max-width: 100vw;
    max-height: 90vh;
    overflow: hidden;
}

#input-overlay {
    position: absolute;
    top: calc(10vh + 32px);
    left: 70px;
    z-index: 990;
}

.leaflet-control-layers-overlays > label {padding: 5px 0;}

.layer-key > img {margin: 0 5px;}

#start-building-overlay, #end-building-overlay {
    width: 250px;
}
#start-floor-overlay, #end-floor-overlay {
    width: 100px;
}

#start-building, #end-building {
    width: 70%;
}

footer {
    z-index: 990;
    position: fixed;
    bottom: 0px;
    left: 6px;
    font-size: 12px;
    background-color: #f8f9fa;
}

#service-form-container {
    width: 80vw;
    max-width: 1000px;
    margin: 10vh 10vw 15vh;
}

#service-form-container > * {
    padding: 5px 0;
}

#service-form-container > h1, #resources-heading {
    width: 100vw;
    height: 70px;
    background-color: #00205B;
    color: #f8f9fa;
    padding: 15px 0;
    text-align: center;
    position: fixed;
    top: 10vh;
    left: 0;
    z-index: 990;
}

#request-instructions, #service-form-container > h2 {margin-top: 30vh;}

#report-form {
    border: 1px solid #363636;
    border-radius: 5px;
    padding: 15px 20px;
}

#report-form > div {
    margin-bottom: 45px;
}

#report-details-chips {
    width: 90%;
    padding-left: 30px;
}

#submit-report {
    width: 10%;
    min-width: 72px;
    background-color: #283FAF;
    color: #f8f9fa;
    position: relative;
    left: 80%;
}

.summary-input {font-weight: bold;}

.btn-primary {
    background-color: #283FAF;
    color: #f8f9fa;
}

.btn-secondary {
    background-color: #FFC70A;
    color: #363636;
}

.btn-secondary a {
    color: #363636;
    text-decoration: none;
    font-weight: bold;
}

.btn-light {
    background-color: #D8D8D8;
    color: #363636;
    margin: 5px 10px;
}

.btn-light.active {
    background-color: #283FAF;
    color: #f8f9fa;
}

.btn-light.active:focus {
    box-shadow: none;
}

#banner-slides {
    margin-top: calc(10vh + 70px);
    width: 100vw;
}

.carousel-caption {
    background-color: #00205BD9;
    position: absolute;
    left: 10vw;
    top: calc(100vw / 7);
    max-width: 350px;
    height: fit-content;
    font-family: 'proxima-nova', Arial, Helvetica, sans-serif;
    padding: 20px;
}

.carousel-caption h2 {text-align: left;}

.carousel-caption button {
    position: relative;
    right: 100px;
}

#resources-cards {
    width: 80%;
    margin: 30px auto;
    display: flex;
    justify-content: space-between;
}

.card {width: 22vw;}

@media screen and (max-width: 1150px) {
    /*accessibility map sidebar*/
    main.overlay-map {
        width: 100vw;
        left: 0;
        top: 10vh;
    }
    #sidebar, #sidebar-container, #route-input {width: 33vw;}
}

@media screen and (max-width: 900px) {
    /*accessibility map sidebar*/
    main.overlay-map {
        width: 100vw;
        position: absolute;
        left: 0;
        top: 10vh;
        max-height: 90vh !important;
        overflow-y: hidden !important;
    }

    main {
        width: 100vw !important;
        height: 55vh;
        max-height: 55vh !important;
        overflow-y: hidden !important;
        position: absolute;
        top: 25vh;
        left: 0 !important;
    }
    
    #sidebar, #sidebar-container, #route-input {width: 100vw;}

   #sidebar-container {
        position: absolute;
        top: 10vh;
        left: 0;
        top: 10vh;
    }

    #route-input {
        position: fixed;
        top: 10vh;
        left: 0;
        width: calc(100vw + 12px);
        height: 15vh;
    }

    #input-fields {width: 65%;}

    #route-info {
        top: 70vh;
        width: 70%;
        margin: 20px 20%;
        padding-bottom: 20vh;
    }

    #info-header img {
        visibility: visible;
        display: block;
    }

    #finish-route, #find-route {
        left: 50%;
        width: 10%;
        min-width: 60px;
        margin-top: 20px;
        top: 70vh;
    }

    /*service request form page*/
    #request-instructions {margin-top: 23vh;}

    /*disability resources cards flex*/
    #resources-cards {
      display: block;
    }
    .card {
        width: 70%;
        max-width: 400px;
        margin: 25px auto;
    }
}

@media screen and (max-width: 650px) {
    #map-page {
        max-width: 100vw;
        max-height: 100vh;
        overflow-y: hidden;
        overflow-x: hidden;
    }

    /*navbar links*/
    .nav-item {padding-bottom: 20px;}

    .nav-link {padding-top: 20px;}

    /*route input overlay*/
    #input-overlay {
        width: 70%;
        left: 15%;
        top: 25vh;
    }

    #input-overlay .input-group {
        max-width: 400px;
        margin: 0 auto;
    }

    #start-building-overlay, #end-building-overlay {
        width: 150px;
    }
    #start-floor-overlay, #end-floor-overlay {
        width: 80px;
    }

    /* route info bottom bar*/
    #route-info {
        width: 80%;
        margin: 10px 15% 20px;
    }

    #finish-route, #find-route {
        left: 70%;
        margin-top: 10px;
    }

    #access-summary, #directions {width: 60vw;}

    #resources-cards {
        width: 90%;
        margin: 30px auto;
        display: block;
    }
}

@media screen and (max-width: 500px) {
    /*accessibility map sidebar*/
    #input-fields {width: 75%;}

    #route-info {
        width: 85%;
        margin: 10px 10% 20px;
    }

    #finish-route, #find-route {
        left: 73%;
    }

    #submit-report {
        left: 70%;
    }
}

